Added CV timeline

--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -8,23 +8,22 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
-
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/1b4e84012c.js" crossorigin="anonymous"></script>
-
 
     <title>Colter May</title>
 </head>
 
 <body>
     <header class="header">
-          <!-- ====== SCROLL BANNER ======-->
-          <div class="scroll">
+        <!-- ====== SCROLL BANNER ====== -->
+        <div class="scroll">
             <p>scroll</p>
-          </div>
+        </div>
 
-        <!-- ====== NAVIGATION ======-->
+        <!-- ====== NAVIGATION ====== -->
         <nav class="main__nav">
             <a class="logo" href="#">Colter <span class="active">May</span>.</a>
             <ul class="nav">
@@ -38,8 +37,8 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
         </nav>
-                
-        <!-- ====== HEADER SLIDER ======-->
+
+        <!-- ====== HEADER SLIDER ====== -->
         <div class="slider">
             <div class="slide current">
                 <div class="slide__content">
@@ -83,34 +82,141 @@
         </div>
     </header>
 
+    <!-- ====== SECTION ABOUT ====== -->
     <section class="section__about" id="about">
         <h1 class="heading__primary">About</h1>
-            <div class="about">
-                <div class="about__text">
-                    <p>
-                        Born in Bozeman Montana, Colter was raised in a family that 
-                        valued faith and wholesome activities. From his father he learned 
-                        to love the outdoors, respect wildlife, and to live with commitment, 
-                        consistency, and passion. From his mother, he was taught humor, 
-                        kindness, and the value of finding joy in imagination. These roots 
-                        provided the fertile beginnings for Colter's drive to become an artist. 
-                        While the subject of his work primarily focuses on wildlife and landscapes, 
-                        his ideation and philosophy behind his work are directly influenced by 
-                        the values he learned and lives in his home. Colter is currently working 
-                        on a BFA degree in painting at Brigham Young University-Idaho. He lives in 
-                        Rexburg with his wife Bobbe and their two daughters Mindy and Emi.
-                    </p>
-                    <div class="about__name">
-                        <p>Wildlife ispired artist</p>
-                        <h2 class="heading__secondary">
-                            Colter <span class="active">May</span>
-                        </h2>
-                    </div>
-                </div>
-                <div class="about__photo">
-                    <img src="./img/Colter-min.jpg" alt="Colter May">
+        <div class="about">
+            <div class="about__text">
+                <p>
+                    Born in Bozeman Montana, Colter was raised in a family that
+                    valued faith and wholesome activities. From his father he learned
+                    to love the outdoors, respect wildlife, and to live with commitment,
+                    consistency, and passion. From his mother, he was taught humor,
+                    kindness, and the value of finding joy in imagination. These roots
+                    provided the fertile beginnings for Colter's drive to become an artist.
+                    While the subject of his work primarily focuses on wildlife and landscapes,
+                    his ideation and philosophy behind his work are directly influenced by
+                    the values he learned and lives in his home. Colter is currently working
+                    on a BFA degree in painting at Brigham Young University-Idaho. He lives in
+                    Rexburg with his wife Bobbe and their two daughters Mindy and Emi.
+                </p>
+                <div class="about__name">
+                    <p>Wildlife ispired artist</p>
+                    <h2 class="heading__secondary">
+                        Colter <span class="active">May</span>
+                    </h2>
                 </div>
             </div>
+            <div class="about__photo">
+                <img src="./img/Colter-min.jpg" alt="Colter May">
+            </div>
+        </div>
+
+        <!-- ====== CV TIMELINE ====== -->
+        <div class="cv">
+            <h1 class="heading__primary mg-lb-lg">
+                Curriculum Vitae
+            </h1>
+            <div class="timeline">
+                <!-- <div class="container right">
+                    <div class="content">
+                        <h2>Shows</h2>
+                        <h3>2018</h3>
+                        <ul>
+                            <li>Best in Show, Utah County State Fair, <q>Pastel Horse</q> oil pastel</li>
+                            <li>People’s Choice Award, Southern Virginia University Student Art Show,
+                                <q>My Fish: Dog</q> Ink and colored pencil</li>
+                        </ul>
+                    </div>
+                </div> -->
+                <div class="container left">
+                    <div class="content">
+                        <h2>Shows</h2>
+                        <h3>2020</h3>
+                        <ul>
+                            <li><q>Student Show Exhibit</q>, Brigham Young University - Idaho</li>
+                            <li><q>Introspection</q>, Yellowstone Teton Gallery, St. Anthony, Idaho</li>
+                            <li><q>Winter Fine Arts Show</q>, Yellowstone Teton Gallery, St. Anthony, Idaho</li>
+                            <li>Idaho Arts Council National Juried Exhibition, Idaho Falls, Idaho</li>
+                            <li>Art Grows Rexburg, Rexburg Idaho</li>
+                            <li>Shades of Red, Camelback Gallery</li>
+                            <li>Spring City Plein Air Competitio</li>
+                            <li> Business Card Show, J Kirk Richards Gallery, Provo Utah</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="container right">
+                    <div class="content">
+                        <h2>Shows</h2>
+                        <h3>2018-2019</h3>
+                        <ul>
+                            <li><q>Student Show Exhibit</q>, Brigham Young University - Idaho</li>
+                            <li> Art Grows Rexburg, Rexburg Idaho</li>
+                            <li><q>Book of Mormon Art Show</q>Special Collections & Archives, Brigham Young University - Idaho</li>
+                            <li> Student Art Show, Southern Virginia University</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="container left">
+                    <div class="content">
+                        <h2>Awards</h2>
+                        <h3>2020-2021</h3>
+                        <ul>
+                            <li>Finalist, Camelback Gallery, Shades of Red Show</li>
+                            <li>First Place Amateur, Art Grows Rexburg</li>
+                            <li>Art Talent Award Scholarship, Brigham Young University - Idaho</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="container right">
+                    <div class="content">
+                        <h2>Awards</h2>
+                        <h3>2019</h3>
+                        <ul>
+                            <li>Cover Award, The Review, Southern Virginia University Publication, Release, Cyanotype</li>
+                            <li> Reserve Grand Champion, Madison County Fair</li>
+                            <li>Best in Catagory, Book Arts, “Book of Mormon Art Show” Special Collections & Archives, 
+                                Brigham Young University - Idaho</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="container left">
+                    <div class="content">
+                        <h2>Awards</h2>
+                        <h3>2018</h3>
+                        <ul>
+                            <li>Best in Show, Utah County State Fair, <q>Pastel Horse</q> oil pastel</li>
+                            <li>People’s Choice Award, Southern Virginia University Student Art Show,
+                                <q>My Fish: Dog</q> Ink and colored pencil</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="container right">
+                    <div class="content">
+                        <h2>Education</h2>
+                        <h3>2017-2018</h3>
+                        <p> Southern Virginia University, Art Major, Concentration Graphic Design </p>
+                    </div>
+                </div>
+                <div class="container left">
+                    <div class="content">
+                        <h2>Mentors</h2>
+                        <ul>
+                            <li><span class="mentor">Kimball Geisler</span> &ndash; Plein Air Internship</li>
+                            <li><span class="mentor">Brian Astle</span> &ndash; Painting, Brigham Young University - Idaho</li>
+                            <li><span class="mentor">Leon Parson</span> &ndash; Painting & Drawing, Brigham Young University - Idaho</li>
+                            <li><span class="mentor">Barbara Crawford</span> &ndash; Painting & Drawing, Southern Virginia University</li>
+                            <li><span class="mentor">Bryce Pendleton</span>&ndash; Design, Southern Virginia University</li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class="about-cv">
+
     </section>
 
     <script src="./js/main.js"></script>
