added timeline, art slider

--- a/coltermay.com/index.html
+++ b/coltermay.com/index.html
@@ -84,9 +84,93 @@
         </div>
     </header>
 
+    <!-- ====== SECTION ART ====== -->
+    <section class="section__art" id="art">
+        <h2 class="heading__secondary mg-bottom-lg" data-text="01">My Art Work</h2>
+        <div class="art__slider">
+            <div class="slider-wrapper">
+                <div class="slide-content">
+                    <div class="slide-image prev">
+                        <img src="./img/native-girl.jpg">
+                    </div>
+                    <div class="slide-description">
+                        <p class="slide-date">30.07.2016.</p>
+                        <h3 class="heading__terceary mg-bottom-sm black">Warrior</h3>
+                        <p class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat
+                            apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum
+                            laoreet, per rebum omittam ex. </p>
+                        <a href="#warrior-popup" class="slide__more popup__link">Show frame</a>
+                    </div>
+                </div>
+                  <!-- ART POPUP -->
+                  <!-- <div class="popup" id="warrior-popup">
+                    <a href="#art" class="popup__close">&times;</a>
+                    <div class="popup__img">
+                        <img src="./img/native-girl.jpg" alt="" class="frame">
+                    </div>
+                </div> -->
+
+                <div class="slide-content">
+                    <div class="slide-image prev">
+                        <img src="./img/ram.jpg">
+                    </div>
+                    <div class="slide-description">
+                        <p class="slide-date">30.07.2016.</p>
+                        <h3 class="heading__terceary mg-bottom-sm black">Warrior</h3>
+                        <p class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat
+                            apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum
+                            laoreet, per rebum omittam ex. </p>
+                            <a href="#rum-popup" class="slide__more popup__link">Show frame</a>
+                        </div>
+                </div>
+
+                 <!-- ART POPUP -->
+                  <!-- <div class="popup" id="rum-popup">
+                    <a href="#art" class="popup__close">&times;</a>
+                    <div class="popup__img">
+                        <img src="./img/ram.jpg" alt="Ram" class="frame">
+                    </div>
+                </div> -->
+
+                <div class="slide-content">
+                    <div class="slide-image prev">
+                        <img src="./img/native-girl.jpg">
+                    </div>
+                    <div class="slide-description">
+                        <p class="slide-date">30.07.2016.</p>
+                        <h3 class="heading__terceary mg-bottom-sm black">Warrior</h3>
+                        <p class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat
+                            apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum
+                            laoreet, per rebum omittam ex. </p>
+                        <button class="slide__more">Show frame</button>
+                    </div>
+                </div>
+                <div class="slide-content">
+                    <div class="slide-image prev">
+                        <img src="./img/ram.jpg">
+                    </div>
+                    <div class="slide-description">
+                        <p class="slide-date">30.07.2016.</p>
+                        <h3 class="heading__terceary mg-bottom-sm black">Warrior</h3>
+                        <p class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat
+                            apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum
+                            laoreet, per rebum omittam ex. </p>
+                        <button class="slide__more">Show frame</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="arrows">
+                <a href="#" title="Next" class="arrow slider-link next"></a>
+                <a href="#" title="Previous" class="arrow slider-link prev"></a>
+            </div>
+
+        </div>
+    </section>
+
     <!-- ====== SECTION ABOUT ====== -->
     <section class="section__about" id="about">
-        <h2 class="heading__secondary" data-text="01">About</h2>
+        <h2 class="heading__secondary" data-text="02">About</h2>
         <div class="about">
             <div class="about__text">
                 <p>
@@ -115,7 +199,7 @@
         </div>
 
         <!-- ====== CV TIMELINE ====== -->
-        <h2 class="heading__secondary" data-text="02">Curriculum Vitae</h2>
+        <h2 class="heading__secondary" data-text="03">Curriculum Vitae</h2>
         <div class="cv">
             <div class="mentors__box">
                 <div class="content left">
@@ -228,71 +312,6 @@
         </div>
     </section>
 
-    <!-- ====== SECTION ART ====== -->
-    <section class="section__art" id="art">
-        <h2 class="heading__secondary mg-bottom-lg" data-text="03">My Art Work</h2>
-        <div class="art__slider">
-            <div class="slider-wrapper flex">
-                <div class="art__slide flex">
-                    <div class="slide-image slider-link prev">
-                        <img src="./img/native-girl.jpg">
-                    <div class="overlay"></div>
-                    </div>
-                    <div class="slide-content">
-                        <div class="slide-date">30.07.2017.</div>
-                        <div class="slide-title">Warrior</div>
-                        <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat
-                            apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum
-                            laoreet, per rebum omittam ex. </div>
-                        <div class="slide-more">READ MORE</div>
-                    </div>
-                </div>
-                <div class="art__slide flex">
-                    <div class="slide-image slider-link next"><img src="./img/ram.jpg">
-                        <div class="overlay"></div>
-                    </div>
-                    <div class="slide-content">
-                        <div class="slide-date">30.08.2017.</div>
-                        <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
-                        <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat
-                            apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum
-                            laoreet, per rebum omittam ex. </div>
-                        <div class="slide-more">READ MORE</div>
-                    </div>
-                </div>
-                <div class="art__slide flex">
-                    <div class="slide-image slider-link next"><img src="./img/ram.jpg">
-                        <div class="overlay"></div>
-                    </div>
-                    <div class="slide-content">
-                        <div class="slide-date">30.09.2017.</div>
-                        <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
-                        <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat
-                            apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum
-                            laoreet, per rebum omittam ex. </div>
-                        <div class="slide-more">READ MORE</div>
-                    </div>
-                </div>
-                <div class="art__slide flex">
-                    <div class="slide-image slider-link next"><img src="./img/ram.jpg">
-                        <div class="overlay"></div>
-                    </div>
-                    <div class="slide-content">
-                        <div class="slide-date">30.10.2017.</div>
-                        <div class="slide-title">LOREM IPSUM DOLOR SITE MATE, AD EST ABHORREANT</div>
-                        <div class="slide-text">Lorem ipsum dolor sit amet, ad est abhorreant efficiantur, vero oporteat
-                            apeirian in vel. Et appareat electram appellantur est. Ei nec duis invenire. Cu mel ipsum
-                            laoreet, per rebum omittam ex. </div>
-                        <div class="slide-more">READ MORE</div>
-                    </div>
-                </div>
-            </div>
-            <div class="arrows">
-                <a href="#" title="Previous" class="arrow slider-link prev"></a>
-                <a href="#" title="Next" class="arrow slider-link next"></a>
-            </div>
-        </div>
-    </section>
 
     <section class="section__contact" id="contact">
         <h2 class="heading__secondary" data-text="04">Contact</h2>
